<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_userInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_vorname"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/fragment_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vornahme"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Patient Nachname:"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/fragment_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nachname"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>

        <Spinner
            android:id="@+id/patient_gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/fragment_patient_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:inputType="textMultiLine"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userid"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/fragment_patientId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="25sp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_patient_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sichern"
        android:textSize="25sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>