<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_admin"
        android:name="com.example.patientrecognition.ui.Admin.AdminFragment"
        android:label="@string/title_admin"
        tools:layout="@layout/fragment_admin" >
        <action
            android:id="@+id/action_navigation_admin_to_navigation_new_note"
            app:destination="@id/navigation_new_note" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.patientrecognition.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_patient"
        android:name="com.example.patientrecognition.ui.Patient.PatientsListFragment"
        android:label="@string/title_patient"
        tools:layout="@layout/fragment_patient" >
        <action
            android:id="@+id/action_navigation_patient_to_navigation_edit_user"
            app:destination="@id/navigation_edit_user" />
    </fragment>

    <fragment
        android:id="@+id/navigation_new_note"
        android:name="com.example.patientrecognition.ui.Admin.CreateNewPatientNotes"
        android:label="NewNote"
        tools:layout="@layout/fragment_createnewpatientnote">
        <action
            android:id="@+id/action_navigation_new_note_to_navigation_admin"
            app:destination="@id/navigation_admin" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_user"
        android:name="com.example.patientrecognition.ui.Patient.CreateNewPatient"
        android:label="EditUser"
        tools:layout="@layout/fragment_createnewpatient">
        <action
            android:id="@+id/action_navigation_edit_user_to_navigation_patient"
            app:destination="@id/navigation_patient" />
    </fragment>

</navigation>