<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Admin.AdminFragment"
    >

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/fragment_notes_recyclerView">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_patientList_recyclerView"
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_home_note_view">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fragment_notes_recyclerView"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_firstname"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/user_lasttname"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ausloggen"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/fragment_notes_recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    />


</androidx.constraintlayout.widget.ConstraintLayout>